--- a/Leads/client/styles/partials/_sidebar.scss
+++ b/Leads/client/styles/partials/_sidebar.scss
@@ -1,3 +1,50 @@
 .sidebar {
-  background-color: #009900;
+  width: 200px;
+  position:fixed;
+  background-color: #F6F4F4;
+  padding:10px;
+  margin:10px;
+
+  a {
+    text-decoration: none;
+    color: inherit;
+  }
+
+  &.open {
+    transition: all 1s;
+    top: 0;
+    left: 0;
+  }
+
+  &.closed {
+    transition: all 1s;
+    top:0;
+    left: -180px;
+  }
+
+  header {
+    h4 {
+      float:left;
+    }
+    a {
+      float: right;
+      padding-top: 10px;
+    }
+  }
+
+  ul {
+    list-style: none;
+
+    li {
+      padding-top: 10px;
+
+      &:hover {
+        background-color: whitesmoke;
+      }
+
+      a {
+        margin: 2px;
+      }
+    }
+  }
 }
