--- a/Leads/client/views/sandbox/sandbox.jade
+++ b/Leads/client/views/sandbox/sandbox.jade
@@ -1,5 +1,12 @@
 div.views.sandbox
   sidebar
+    sidebar-title
+      h4 Hello, World
+
+    sidebar-content
+      ul
+        li
+          a(href="") Hello
 
 
 
