--- a/Leads/client/components/directives/sidebar/sidebar.directive.jade
+++ b/Leads/client/components/directives/sidebar/sidebar.directive.jade
@@ -1,7 +1,9 @@
-nav(ng-class="{'open': open, 'closed': !open}").sidebar
-  header
-    div(data-title-html)
-    a(href='' ng-click="toggle()")
-      i(ng-class="{'icon-arrow-right': !open, 'icon-arrow-left': open}")
-  clearfix
-  div(data-content-html)
+nav.sidebar
+  a(href='' ng-click="toggle()").sidebar-toggle
+
+  div(data-sidebar)
+    div(data-sidebar-header ng-class="{'sidebar-header': open, 'sidebar-header-closed': !open}")
+
+    clearfix
+
+    div(data-sidebar-content ng-class="{'sidebar-content': open, 'sidebar-content-closed': !open}")
