--- a/Leads/client/views/sandbox/sandbox.jade
+++ b/Leads/client/views/sandbox/sandbox.jade
@@ -1,12 +1,21 @@
 div.views.sandbox
-  sidebar
-    sidebar-title
-      h4 Hello, World
+  flex-container
+    sidebar
+      sidebar-header
+        h3 Leads
 
-    sidebar-content
-      ul
-        li
-          a(href="") Hello
+      sidebar-content
+        form(name="sandboxNavForm")
+          form-group
+            input(type="text" placeholder="Search")
+        ul.sidebar-list
+          li.sidebar-list-item
+            a(href="") Hello
+
+    main-content
+      header
+        h1 Current Leads
+
 
 
 
