--- a/Leads/client/styles/leads.scss
+++ b/Leads/client/styles/leads.scss
@@ -1,4 +1,15 @@
-@import 'partials/common';
-@import 'partials/_sidebar.directive';
-@import 'partials/_flex-container.directive';
-@import 'partials/main-content.directive';
+// leads.scss
+/* inject:imports */
+/* endinject */
+
+//@import "partials/rendering";
+//@import 'partials/common';
+//@import 'partials/sidebar.directive';
+//@import 'partials/flex-container.directive';
+//@import 'partials/main-content.directive';
+//@import 'partials/help-block.directive';
+//@import "partials/leads-sidebar.directive";
+//@import "partials/customer.directive";
+//@import "partials/address.directive";
+//@import "partials/address-type.directive";
+//@import "partials/lead-details.directive";
