--- a/Leads/client/views/lead/create/lead-create.jade
+++ b/Leads/client/views/lead/create/lead-create.jade
@@ -2,3 +2,15 @@ div.create
   header
     h1 Lead create
 
+  .col-sm-6
+    header
+      h3 Customer details
+    customer(customer="vm.customer")
+
+    header
+      h3 Customer address
+    address(address="vm.customer.address")
+
+  .col-sm-6
+    header
+      h3 Lead details
