--- a/Leads/client/components/directives/customer/customer.directive.jade
+++ b/Leads/client/components/directives/customer/customer.directive.jade
@@ -1,23 +1,17 @@
 div(ng-form="customerForm").directive.customer
-  .col-sm-6
-    form-group
-      control-label First name
-      input(type="text" ng-model="customer.firstName" required)
-      
-    form-group
-      control-label Middle names
-      input(type="text" ng-model="customer.middleNames")
+  form-group
+    control-label First name
+    input(type="text" ng-model="customer.firstName" required).customer-first-name
 
-    form-group
-      control-label Last name
-      input(type="text" ng-model="customer.lastName" required)
+  form-group
+    control-label Middle names
+    input(type="text" ng-model="customer.middleNames").customer-middle-names
 
-    form-group
-      control-label Birth date
-      input(type="date" ng-model="customer.birthDate")
+  form-group
+    control-label Last name
+    input(type="text" ng-model="customer.lastName" required).customer-last-name
 
-  .col-sm-6
-    address(address="customer.address")
-
-
+  form-group
+    control-label Birth date
+    input(type="date" ng-model="customer.birthDate").customer-birth-date
 
