--- a/Leads/client/ui/sidebar/_sidebar.directive.scss
+++ b/Leads/client/ui/sidebar/_sidebar.directive.scss
@@ -63,7 +63,7 @@ $sidebar-list-item-transition-time: .1s;
 .sidebar-list {
   font-size: 1.3em;
   list-style: none;
-  padding-left:0px;
+  padding-left:0;
 }
 
 .sidebar-list-item {
