--- a/Leads/client/lead/list/list.jade
+++ b/Leads/client/lead/list/list.jade
@@ -4,15 +4,6 @@ flex-container
 
   main-content
     header
-      h1 Current Leads
-    table.table-hover.table
-      thead
-        tr
-          td ID
-          td Customer
-          td Status
-          td Created
-      tbody
-        tr(ng-repeat="lead in vm.leads")
-          td {{lead.id}}
-          td {{lead.customer | customerToString}}
+      h1 Leads
+    list-table
+
