--- a/Leads/client/customer/customer/customer.directive.jade
+++ b/Leads/client/customer/customer/customer.directive.jade
@@ -1,17 +1,9 @@
 div(ng-form="customerForm").directive.customer
-  form-group
-    control-label First name
-    input(type="text" ng-model="customer.firstName" required).customer-first-name
+  first-name
 
-  form-group
-    control-label Middle names
-    input(type="text" ng-model="customer.middleNames").customer-middle-names
+  middle-names
 
-  form-group
-    control-label Last name
-    input(type="text" ng-model="customer.lastName" required).customer-last-name
+  last-name
 
-  form-group
-    control-label Birth date
-    input(type="date" ng-model="customer.birthDate").customer-birth-date
+  birth-date
 
