--- a/Leads/client/lead/create/lead-create.jade
+++ b/Leads/client/lead/create/lead-create.jade
@@ -1,8 +1,10 @@
-div.create
-  header
-    h1 Lead create
+div.create.container
+  .col-sm-12
+    header
+      h1 Lead create
 
   .col-sm-6
+
     header
       h3 Customer details
     customer(customer="vm.customer")
