--- a/Leads/client/sandbox/sandbox.jade
+++ b/Leads/client/sandbox/sandbox.jade
@@ -1,20 +1,10 @@
 div.views.sandbox
   flex-container
-    sidebar
-      sidebar-header
-        h3 Leads
-
-      sidebar-content
-        form(name="sandboxNavForm")
-          form-group
-            input(type="text" placeholder="Search")
-        ul.sidebar-list
-          li.sidebar-list-item
-            a(href="") Hello
-
     main-content
       header
-        h1 Current Leads
+        h1 Sandbox
+
+      date-selector
 
 
 
