--- a/Leads/client/lead/lead-details/lead-details.directive.scss
+++ b/Leads/client/lead/lead-details/lead-details.directive.scss
@@ -3,13 +3,12 @@
 }
 
 .lead-details-interests {
-
+  max-width: 250px;
 }
 
 .lead-details-due-date {
-
+  max-width: 150px;
 }
 
 .lead-details-notes {
-
 }
