--- a/Leads/client/customer/customer/customer.directive.scss
+++ b/Leads/client/customer/customer/customer.directive.scss
@@ -2,16 +2,8 @@
 
 }
 
-.customer-first-name {
+.customer-name-part {
  max-width: 250px;
-}
-
-.customer-middle-names {
-  max-width: 250px;
-}
-
-.customer-last-name {
-  max-width: 250px;
 }
 
 .customer-birth-date {
